--- a/main.html
+++ b/main.html
@@ -7,6 +7,29 @@
 </head>
 
 <body>
+	<div id="main_container">
+
+		<div id="input_container">
+			<input id="block_id" type="text" placeholder="Enter the block Number">
+			<input id="colour_id" type="color">
+		</div>
+
+		<div id="grid_container">
+			<div class="grid-item" id="1">1</div>
+	        <div class="grid-item" id="2">2</div>
+	        <div class="grid-item" id="3">3</div>
+	        <div class="grid-item" id="4">4</div>
+	        <div class="grid-item" id="5">5</div>
+	        <div class="grid-item" id="6">6</div>
+	        <div class="grid-item" id="7">7</div>
+	        <div class="grid-item" id="8">8</div>
+	        <div class="grid-item" id="9">9</div>
+		</div>
+		<div id="btn_container"> 
+			<button id="change_button">Change Colour</button>
+			<button id="reset">Reset</button>
+		</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
