--- a/main.html
+++ b/main.html
@@ -7,14 +7,14 @@
 </head>
 
 <body>
-	<div id="main_container">
+	<div id="main-container">
 
 		<div id="input_container">
 			<input id="block_id" type="text" placeholder="Enter the block Number">
 			<input id="colour_id" type="color">
 		</div>
 
-		<div id="grid_container">
+		<div id="grid-container">
 			<div class="grid-item" id="1">1</div>
 	        <div class="grid-item" id="2">2</div>
 	        <div class="grid-item" id="3">3</div>
