--- a/main.html
+++ b/main.html
@@ -7,32 +7,28 @@
 </head>
 
 <body>
-	<div id="main-container">
 
-		<div id="input_container">
-			<input id="block_id" type="text" placeholder="Enter the block Number">
-			<input id="colour_id" type="color">
-		</div>
-
-		<div id="grid-container">
-			<div class="grid-item" id="1">1</div>
-	        <div class="grid-item" id="2">2</div>
-	        <div class="grid-item" id="3">3</div>
-	        <div class="grid-item" id="4">4</div>
-	        <div class="grid-item" id="5">5</div>
-	        <div class="grid-item" id="6">6</div>
-	        <div class="grid-item" id="7">7</div>
-	        <div class="grid-item" id="8">8</div>
-	        <div class="grid-item" id="9">9</div>
-		</div>
-		<div id="btn_container"> 
-			<button id="change_button">Change Colour</button>
-			<button id="reset">Reset</button>
-		</div>
+	<div id="grid-container" class="grid-container">
+		<div id="1" class="grid-item" >1</div>
+		<div id="2" class="grid-item" >2</div>
+		<div id="3" class="grid-item" >3</div>
+		<div id="4" class="grid-item" >4</div>
+		<div id="5" class="grid-item" >5</div>
+		<div id="6" class="grid-item" >6</div>
+		<div id="7" class="grid-item" >7</div>
+		<div id="8" class="grid-item" >8</div>
+		<div id="9" class="grid-item" >9</div>
 	</div>
+
+	<form>
+		<input type="text" id="block_id" />
+		<input type="text" id="colour_id" />
+		<button id="change_button" >Change</button>
+	</form>
+<button id="reset_button">Reset</button>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
 
